# dnd-calculator

./: LICENSE  README.md  package.json  tsconfig.json
backend/: .env  Cargo.toml
backend/migrations/2020-04-01-000909_initial/: down.sql  up.sql
backend/migrations/2020-04-01-014331_rename_tables/: down.sql  up.sql
backend/migrations/2020-04-01-024934_add_templates/: down.sql  up.sql
backend/src/: macros.rs  main.rs  models.rs  schema.rs
backend/src/character/: item.rs  mod.rs  template.rs
src/: App.vue  random.ts  types.ts
src/components/: DiceRoller.vue  HelloWorld.vue  ItemEditor.vue  Modal.vue  SelectItem.vue  TemplateEditor.vue
src/views/: Home.vue  ListTemplates.vue
